# kafka-example

./: .gitignore  README.md  base.py  cli.py  docker-compose.yml  publisher.py  pyproject.toml  subscriber.py
