[tool.poetry]
name = "kafka-example"
version = "0.1.0"
description = "Kafka python example"
authors = ["Pedro Calleja <pedro@urbvan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kafka-python = "^2.0.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
